--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,7 +40,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "marked": "^1.1.1"
+  },
   "author": "",
   "license": "ISC",
   "proxy": "http://localhost:5000"
