--- a/front-end/package.json
+++ b/front-end/package.json
@@ -45,5 +45,5 @@
   },
   "author": "",
   "license": "ISC",
-  "proxy": "https://goe-server.herokuapp.com/"
+  "proxy": "http://localhost:5000/"
 }
