--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /front-end/node_modules
+/front-end/build
 /back-end/node_modules
 /back-end/master-admin-credentials.txt
 /templates
