--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
