--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # dependencies
 /front-end/node_modules
 /front-end/build
+/new front-end/node_modules
+/new front-end/build
 /back-end/node_modules
 /back-end/master-admin-credentials.txt
 /templates
